[package]
name = "rusty-roguelike"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
specs = { version="0.18.0", default-features = false }
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'KeyboardEvent'
] 
