[package]
name = "rusty-roguelike"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
specs = { version="0.18.0", default-features = false }
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
specs-derive = "0.4.1"
log = "0.4.17"
futures = "0.3.27"
wasm-bindgen-futures = "0.4.34"
gloo-timers = { version="0.2.6", features=['futures'] }

[dependencies.console_log]
version = "1.0.0"
features = ['wasm-bindgen']

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'KeyboardEvent',
  'MouseEvent'
] 
